--- a/docs/biology/lineage.ipynb
+++ b/docs/biology/lineage.ipynb
@@ -334,7 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = file.backed(run_input=True)\n",
+    "adata = file.backed(is_run_input=True)\n",
     "adata"
    ]
   },
