--- a/docs/biology/lineage.ipynb
+++ b/docs/biology/lineage.ipynb
@@ -411,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "le_subset = ln.File(adata_subset.to_adata(), key=\"subset/mini_anndata_with_obs.h5ad\")"
+    "file_subset = ln.File(adata_subset.to_adata(), key=\"subset/mini_anndata_with_obs.h5ad\")"
    ]
   },
   {
