--- a/docs/biology/lineage.ipynb
+++ b/docs/biology/lineage.ipynb
@@ -494,7 +494,10 @@
     "le_subset = ln.File.select(\n",
     "    suffix=\".h5ad\",\n",
     "    key__startswith=\"subset\",\n",
-    "    cell_types__name__in=[cell_types.hematopoietic_stem_cell, cell_types.T_cell],\n",
+    "    cell_types__name__in=[\n",
+    "        cell_types_bionty_lookup.hematopoietic_stem_cell,\n",
+    "        cell_types.T_cell,\n",
+    "    ],\n",
     ").first()"
    ]
   },
