--- a/docs/biology/lineage.ipynb
+++ b/docs/biology/lineage.ipynb
@@ -496,7 +496,7 @@
     "    key__startswith=\"subset\",\n",
     "    cell_types__name__in=[\n",
     "        cell_types_bionty_lookup.hematopoietic_stem_cell,\n",
-    "        cell_types.T_cell,\n",
+    "        cell_types_bionty_lookup.T_cell,\n",
     "    ],\n",
     ").first()"
    ]
