--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -689,7 +689,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.select(ln.File).filter(cell_types__name=db_lookup.tcm_naive_helper_t_cells).df()"
+    "ln.select(ln.File).filter(cell_types=db_lookup.tcm_naive_helper_t_cells).df()"
    ]
   },
   {
