--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Manage cell type ontology"
+    "# Manage a cell type registry"
    ]
   },
   {
@@ -343,7 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "celltype_bionty.search(\"T cells\", celltype_bionty.name)"
+    "celltype_bionty.search(\"T cells\")"
    ]
   },
   {
@@ -762,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.16"
   },
   "nbproject": {
    "id": "s5mkN5NQ1ttI",
