--- a/docs/biology/celltypist.ipynb
+++ b/docs/biology/celltypist.ipynb
@@ -49,6 +49,33 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{warning}\n",
+    "\n",
+    "Please ensure that you have created or loaded a LaminDB instance before running the remaining part of this notebook!\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# A lamindb instance containing Bionty schema (skip if you already loaded your instance)\n",
+    "import lamindb as ln\n",
+    "\n",
+    "ln.setup.init(storage=\"./celltypist\", schema=\"bionty\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -70,32 +97,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import lamindb as ln\n",
+    "import lnschema_bionty as lb\n",
+    "\n",
     "import celltypist\n",
     "import pandas as pd\n",
-    "import lamindb as ln\n",
-    "import lnschema_bionty as lb"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```{warning}\n",
-    "\n",
-    "Please ensure that you have created or loaded a LaminDB instance before running the remaining part of this notebook!\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A lamindb instance containing Bionty schema (skip if you already loaded your instance)\n",
-    "\n",
-    "ln.setup.init(storage=\"./celltypist\", schema=\"bionty\")\n",
     "\n",
     "ln.settings.verbosity = 3  # show hints"
    ]
@@ -348,15 +354,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "public_records[:2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# use ontology_id as keys\n",
     "\n",
     "public_records_dict = {r.ontology_id: r for r in public_records}"
@@ -376,19 +373,25 @@
     "    public_record = public_records_dict[ontology_id]\n",
     "\n",
     "    # if both name and ontology_id match public record, use public record\n",
-    "    if name == public_record.name:\n",
+    "    if name.lower() == public_record.name.lower():\n",
+    "        records_names[name] = public_record\n",
     "        continue\n",
     "    else:  # when ontology_id matches the public record and name doesn't match\n",
     "        # if singular form of the Celltypist name matches public name\n",
-    "        if name.rstrip(\"s\") == public_record.name:\n",
+    "        if name.lower().rstrip(\"s\") == public_record.name.lower():\n",
     "            # add the Celltypist name to the synonyms of the public ontology record\n",
     "            public_record.add_synonym(name)\n",
     "            records_names[name] = public_record\n",
     "            continue\n",
     "        if public_record.synonyms is not None:\n",
-    "            synonyms = public_record.synonyms.split(\"|\")\n",
+    "            synonyms = [s.lower() for s in public_record.synonyms.split(\"|\")]\n",
     "            # if any of the public matches celltypist name\n",
-    "            if any([i in {name, name.rstrip(\"s\")} for i in synonyms]):\n",
+    "            if any(\n",
+    "                [\n",
+    "                    i.lower() in {name.lower(), name.lower().rstrip(\"s\")}\n",
+    "                    for i in synonyms\n",
+    "                ]\n",
+    "            ):\n",
     "                # add the Celltypist name to the synonyms of the public ontology record\n",
     "                public_record.add_synonym(name)\n",
     "                records_names[name] = public_record\n",
@@ -448,7 +451,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "records = set(records_names.values())  # only save unique records\n",
+    "records = list(records_names.values())\n",
     "\n",
     "ln.save(records)"
    ]
@@ -520,6 +523,7 @@
     "    if name == \"T cells\":\n",
     "        record = lb.CellType.from_bionty(name=\"T cell\")\n",
     "        record.add_synonym(name)\n",
+    "        record.save()\n",
     "    else:\n",
     "        record = lb.CellType(name=name)\n",
     "        record.save()\n",
@@ -596,7 +600,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_lookup.memory_b_cells"
+    "db_lookup.memory_b_cell"
    ]
   },
   {
@@ -613,7 +617,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_lookup.memory_b_cells.parents.all()"
+    "db_lookup.memory_b_cell.parents.all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_lookup.memory_b_cell.parents.all()[0].parents.all()"
    ]
   },
   {
@@ -758,7 +771,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_annotated = ln.File(adata_annotated, name=\"sample_cell_by_gene-celltypist\")"
+    "file_annotated = ln.File(adata_annotated, key=\"sample_cell_by_gene-celltypist.h5ad\")"
    ]
   },
   {
