--- a/docs/biology/enrichr.ipynb
+++ b/docs/biology/enrichr.ipynb
@@ -222,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_records = ln.parse(go_bp_parsed.keys(), Pathway.ontology_id)"
+    "pathway_records = Pathway.from_values(go_bp_parsed.keys(), Pathway.ontology_id)"
    ]
   },
   {
@@ -274,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_records = ln.parse(all_genes, Gene.symbol)"
+    "gene_records = Gene.from_values(all_genes, Gene.symbol)"
    ]
   },
   {
@@ -638,8 +638,8 @@
     "]\n",
     "\n",
     "# get pathway records\n",
-    "enr_up_top10_pathways = ln.parse(enr_up_top10, Pathway.ontology_id)\n",
-    "enr_dw_top10_pathways = ln.parse(enr_dw_top10, Pathway.ontology_id)"
+    "enr_up_top10_pathways = Pathway.from_values(enr_up_top10, Pathway.ontology_id)\n",
+    "enr_dw_top10_pathways = Pathway.from_values(enr_dw_top10, Pathway.ontology_id)"
    ]
   },
   {
@@ -854,7 +854,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.16"
   },
   "nbproject": {
    "id": "6oxEIEduvo6w",
