--- a/docs/biology/lineage.ipynb
+++ b/docs/biology/lineage.ipynb
@@ -161,19 +161,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```{note}\n",
-    "\n",
-    "If you do not want auto-populated ontology_ids, use ln.parse(..., from_bionty=False).\n",
-    "\n",
-    "Also see: {doc}`docs:guide/parse`\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -205,8 +192,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_types = ln.parse(adata.obs.cell_type, lb.CellType.name)\n",
-    "tissues = ln.parse(adata.obs.tissue, lb.Tissue.name)"
+    "cell_types = lb.CellType.from_values(adata.obs.cell_type, lb.CellType.name)\n",
+    "tissues = lb.Tissue.from_values(adata.obs.tissue, lb.Tissue.name)"
    ]
   },
   {
@@ -465,7 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_types = ln.parse(adata_subset.obs.cell_type, lb.CellType.name)"
+    "cell_types = lb.CellType.from_values(adata_subset.obs.cell_type, lb.CellType.name)"
    ]
   },
   {
